Manifests/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: exam
spec:
  serviceName: "db-service"
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: db
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          resources:
            requests:
              memory: "1Gi"      # Minimum requis : 1Gi
              cpu: "500m"        # Minimum requis : 0.5 CPU
            limits:
              memory: "2Gi"      # Maximum autorisé : 2Gi
              cpu: "1"           # Maximum autorisé : 1 CPU
          livenessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - "-h127.0.0.1"
                - "-uroot"
                - "-p$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - "-h127.0.0.1"
                - "-uroot"
                - "-p$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            exec:
              command:
                - mysqladmin
                - ping
                - "-h127.0.0.1"
                - "-uroot"
                - "-p$MYSQL_ROOT_PASSWORD"
            initialDelaySeconds: 60
            periodSeconds: 15
      volumeClaimTemplates:
        - metadata:
            name: mysql-data
          spec:
            accessModes:
              - ReadWriteOnce
            resources:
              requests:
                storage: 10Gi

---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: exam
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
