Manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: salmasaghough/frontendex
          ports:
            - containerPort: 80
          resources:
            requests:
               memory: "128Mi" 
               cpu: "100m"
            limits:
               memory: "256Mi"
               cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  selector:
    type: ClusterIP
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
